# pybind11_iterator_race

./: CMakeLists.txt  README.md  patch.patch  pyproject.toml
src/: module.cpp
tests/: test_race.py
